<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/progress_bar"
        android:indeterminateTint="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible"/>

    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_centerInParent="true">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            app:cardCornerRadius="4dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="15dp"
                tools:context=".presentation.meta.AddMetaItemFragment">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="26sp"
                    android:text="@string/new_meta_build"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:layout_marginBottom="10dp"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/et_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/title_field"
                        android:importantForAutofill="no"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp">

                    <EditText
                        android:id="@+id/et_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="100dp"
                        android:ems="10"
                        android:hint="@string/description_field"
                        android:importantForAutofill="no"
                        android:inputType="textMultiLine" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp">

                    <AutoCompleteTextView
                        android:id="@+id/actt_tier_dropdown_menu"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/tier"
                        android:inputType="none"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp">

                    <AutoCompleteTextView
                        android:id="@+id/actt_class_dropdown_menu"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/class_"
                        android:inputType="none"/>

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:baselineAligned="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="5dp">
                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp">

                        <AutoCompleteTextView
                            android:id="@+id/actt_primary_weapon_left_dropdown_menu"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/primary_weapon"
                            android:inputType="none"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp">

                        <AutoCompleteTextView
                            android:id="@+id/actt_primary_weapon_right_dropdown_menu"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/slot_2"
                            android:inputType="none"/>

                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:baselineAligned="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="5dp">
                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp">

                        <AutoCompleteTextView
                            android:id="@+id/actt_secondary_weapon_left_dropdown_menu"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/secondary_weapon"
                            android:inputType="none"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp">

                        <AutoCompleteTextView
                            android:id="@+id/actt_secondary_weapon_right_dropdown_menu"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/slot_2"
                            android:inputType="none"/>

                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>



                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp">

                    <AutoCompleteTextView
                        android:id="@+id/actt_head_dropdown_menu"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/head_armor"
                        android:inputType="none"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp">

                    <AutoCompleteTextView
                        android:id="@+id/actt_chest_dropdown_menu"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/chest_armor"
                        android:inputType="none"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp">

                    <AutoCompleteTextView
                        android:id="@+id/actt_leg_dropdown_menu"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/legs_armor"
                        android:inputType="none"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp">

                    <AutoCompleteTextView
                        android:id="@+id/actt_foot_dropdown_menu"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/foot_armor"
                        android:inputType="none"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">

                    <AutoCompleteTextView
                        android:id="@+id/actt_gloves_dropdown_menu"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/gloves_armor"
                        android:inputType="none"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp" >

                    <AutoCompleteTextView
                        android:id="@+id/actt_back_dropdown_menu"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/back_armor"
                        android:inputType="none"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp" >

                    <AutoCompleteTextView
                        android:id="@+id/actt_neckless_dropdown_menu"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/neckless"
                        android:inputType="none"/>

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:baselineAligned="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="5dp">
                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp">

                        <AutoCompleteTextView
                            android:id="@+id/actt_rign_left_dropdown_menu"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/ring"
                            android:inputType="none"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp">

                        <AutoCompleteTextView
                            android:id="@+id/actt_ring_right_dropdown_menu"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/ring"
                            android:inputType="none"/>

                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <Button
                    android:id="@+id/btn_add_meta_item"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:textSize="18sp"
                    android:text="@string/add_meta"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </ScrollView>

</RelativeLayout>