<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.main.MainFragment"
    android:background="#343434"
    android:tag="main_fragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_user_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="vertical"
                app:flow_verticalAlign="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                    <TextView
                        android:id="@+id/tv_welcome_user_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="@string/welcome_back"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toTopOf="@+id/tv_user_username" />

                    <TextView
                        android:id="@+id/tv_user_username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#DFDFDF"
                        android:textSize="16sp"
                        tools:text="Username" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="20dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/cl_meta"
                        android:layout_width="0dp"
                        android:layout_height="170dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/main_button_background"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/cl_guide"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:id="@+id/iv_meta_title_icon"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:contentDescription="@null"
                            android:src="@drawable/sword_emblem"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/meta"
                            android:textColor="@color/white"
                            android:layout_marginTop="10dp"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            android:shadowColor="@color/black"
                            android:shadowDx="-5"
                            android:shadowDy="-5"
                            android:shadowRadius="-3"
                            app:layout_constraintEnd_toEndOf="@id/iv_meta_title_icon"
                            app:layout_constraintStart_toStartOf="@id/iv_meta_title_icon"
                            app:layout_constraintTop_toBottomOf="@id/iv_meta_title_icon" />


                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/cl_guide"
                        android:layout_width="0dp"
                        android:layout_height="170dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="20dp"
                        android:layout_weight="1"
                        android:background="@drawable/main_button_background"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/cl_meta"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:id="@+id/iv_guide_title_icon"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:contentDescription="@null"
                            android:src="@drawable/guide_emblem"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/guides"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            android:layout_marginTop="10dp"
                            android:textSize="24sp"
                            app:layout_constraintEnd_toEndOf="@id/iv_guide_title_icon"
                            app:layout_constraintStart_toStartOf="@id/iv_guide_title_icon"
                            app:layout_constraintTop_toBottomOf="@id/iv_guide_title_icon" />


                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/cl_3"
                        android:layout_width="0dp"
                        android:layout_height="170dp"
                        android:layout_weight="1"
                        android:background="@drawable/main_button_background"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="10dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/cl_events"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:id="@+id/iv_title_icon_3"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:contentDescription="@null"
                            android:src="@drawable/guide_emblem"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/meta"
                            android:textColor="@color/white"
                            android:layout_marginTop="10dp"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toEndOf="@id/iv_title_icon_3"
                            app:layout_constraintStart_toStartOf="@id/iv_title_icon_3"
                            app:layout_constraintTop_toBottomOf="@id/iv_title_icon_3" />


                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/cl_events"
                        android:layout_width="0dp"
                        android:layout_height="170dp"
                        android:layout_weight="1"
                        android:background="@drawable/main_button_background"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="20dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/cl_3"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:id="@+id/iv_event_title_icon"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:contentDescription="@null"
                            android:src="@drawable/event"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/events"
                            android:textColor="@color/white"
                            android:layout_marginTop="10dp"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toEndOf="@id/iv_event_title_icon"
                            app:layout_constraintStart_toStartOf="@id/iv_event_title_icon"
                            app:layout_constraintTop_toBottomOf="@id/iv_event_title_icon" />


                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

            <Button
                android:id="@+id/btn_sign_out"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:textSize="16sp"
                android:text="@string/sign_out"
                android:background="@drawable/btn_background"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </LinearLayout>


    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>